# Classficador-de-sentimentos-E-commerce

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: analise.ipynb  data_exploration_pln.ipynb  main.ipynb
src/: config.py  data_preparation.py  extracao_gramatica.py  extracao_opnioes.py  formatacao.py  ngramas.py  polaridade.py
