[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Metadados essenciais 
name = "projeto_pln" 
version = "0.1.0"
description = "Módulo base para processamento de dados e modelagem"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "kagglehub",
    "requests",
    "pyarrow",
]

[tool.setuptools]
packages = ["src"]

