[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Metadados essenciais
name = "projeto_pln"
version = "0.1.0"
description = "Modulo base para processamento de dados e modelagem"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "emoji>=2.15.0",
    "kagglehub>=1.0.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
]

[tool.setuptools]
packages = ["src"]

